prevenção de entrada duplicada com diferentes ids e ajustes nos campos obrigatórios
